--- a/index.html
+++ b/index.html
@@ -144,9 +144,8 @@
     <div class="profile_inner">
         <img draggable="false" src="https://www.altrasoluzione.com/images/blog/siti-per-scaricare-immagini-gratis-legalmente/immagini-gratis-big.jpg" alt="&lt;title of image as alt&gt;" title="&lt;title of image as alt&gt;"
             height="120" width="120" />
-        <h1><!-- raw HTML omitted -->
-</h1>
-        <span>This is subtitle</span><div class="social-icons" >
+        <h1>A. Tobia C.</h1>
+        <span>Welcome to my little collection of stuff</span><div class="social-icons" >
     <a href="https://www.linkedin.com/in/alecavalieri/" target="_blank" rel="noopener noreferrer me"
         title="Linkedin">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
