--- a/public/404.html
+++ b/public/404.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><meta charset="utf-8">
+<head><script src="/ZataiLog/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=ZataiLog/livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
 <title>404 Page not found | Tobia&#39;s log</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://alecava01.github.io/ZataiLog/404.html">
+<link rel="canonical" href="http://localhost:1313/ZataiLog/404.html">
 <link crossorigin="anonymous" href="/ZataiLog/assets/css/stylesheet.a090830a421002426baafbd314e38f149d77b4c48a12ee9312700d770b27fb26.css" integrity="sha256-oJCDCkIQAkJrqvvTFOOPFJ13tMSKEu6TEnANdwsn&#43;yY=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://alecava01.github.io/ZataiLog/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://alecava01.github.io/ZataiLog/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://alecava01.github.io/ZataiLog/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://alecava01.github.io/ZataiLog/apple-touch-icon.png">
-<link rel="mask-icon" href="https://alecava01.github.io/ZataiLog/safari-pinned-tab.svg">
+<link rel="icon" href="http://localhost:1313/ZataiLog/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/ZataiLog/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/ZataiLog/favicon-32x32.png">
+<link rel="apple-touch-icon" href="http://localhost:1313/ZataiLog/apple-touch-icon.png">
+<link rel="mask-icon" href="http://localhost:1313/ZataiLog/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="https://alecava01.github.io/ZataiLog/404.html">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/ZataiLog/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -55,15 +55,7 @@
         }
 
     </style>
-</noscript><meta property="og:url" content="https://alecava01.github.io/ZataiLog/404.html">
-  <meta property="og:site_name" content="Tobia&#39;s log">
-  <meta property="og:title" content="404 Page not found">
-  <meta property="og:locale" content="en-us">
-  <meta property="og:type" content="website">
-<meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="404 Page not found">
-<meta name="twitter:description" content="">
-
+</noscript>
 </head>
 
 <body class="list" id="top">
@@ -81,7 +73,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://alecava01.github.io/ZataiLog/" accesskey="h" title="Tobia&#39;s log (Alt + H)">Tobia&#39;s log</a>
+            <a href="http://localhost:1313/ZataiLog/" accesskey="h" title="Tobia&#39;s log (Alt + H)">Tobia&#39;s log</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -107,17 +99,17 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://alecava01.github.io/ZataiLog/" title="Home">
+                <a href="http://localhost:1313/ZataiLog/" title="Home">
                     <span>Home</span>
                 </a>
             </li>
             <li>
-                <a href="https://alecava01.github.io/ZataiLog/archive/" title="Archive">
+                <a href="http://localhost:1313/ZataiLog/archive/" title="Archive">
                     <span>Archive</span>
                 </a>
             </li>
             <li>
-                <a href="https://alecava01.github.io/ZataiLog/search/" title="Search (Alt &#43; /)" accesskey=/>
+                <a href="http://localhost:1313/ZataiLog/search/" title="Search (Alt &#43; /)" accesskey=/>
                     <span>Search</span>
                 </a>
             </li>
@@ -129,7 +121,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="https://alecava01.github.io/ZataiLog/">Tobia&#39;s log</a></span> · 
+        <span>&copy; 2025 <a href="http://localhost:1313/ZataiLog/">Tobia&#39;s log</a></span> · 
 
     <span>
         Powered by
